@@ -23,6 +23,11 @@ import java.io.IOException;
 class ArrayColumnOutputBuffer extends ColumnOutputBuffer {
   private int length;                             // remaining in current array
 
+  private static final int NONE = -1;
+
+  private int runLength;                          // length of current run
+  private int runValue = NONE;                    // what kind of run
+
   public ArrayColumnOutputBuffer(ColumnFileWriter writer, ColumnMetaData meta)
     throws IOException {
     super(writer, meta);
@@ -30,16 +35,47 @@ class ArrayColumnOutputBuffer extends ColumnOutputBuffer {
     assert !getMeta().hasIndexValues();
   }
 
-  @Override public void writeLength(int length) throws IOException {
+  @Override public void writeLength(int l) throws IOException {
     assert this.length == 0;
-    this.length = length;
-    getBuffer().writeLength(length);
+    assert l >= 0;
+    this.length = l;
+    if (l == runValue) {
+      runLength++;                                // continue a run
+      return;
+    }
+    flushRun();                                   // end a run
+    if (l == 1 || l == 0) {
+      runLength = 1;                              // start a run
+      runValue = l;
+    } else {
+      getBuffer().writeLength(l);                 // not a run
+    }
   }
 
   @Override public void writeValue(Object value) throws IOException {
     assert length > 0;
-    getBuffer().writeValue(value, getMeta().getType());
+    if (getMeta().getType() != ValueType.NULL) {
+      flushRun();
+      getBuffer().writeValue(value, getMeta().getType());
+    }
     length -= 1;
+  }
+
+  @Override void flushBuffer() throws IOException {
+    flushRun();
+    super.flushBuffer();
+  }
+
+  private void flushRun() throws IOException {
+    if (runLength == 0)                           // not in run
+      return;
+    else if (runLength == 1)                      // single value
+      getBuffer().writeLength(runValue);
+    else                                          // a run
+      getBuffer().writeLength((3-runValue)-(runLength<<1));
+
+    runLength = 0;                                // reset
+    runValue = NONE;
   }
 
 }
