@@ -19,6 +19,9 @@ Trunk (not yet released)
     types BigDecimal, BigInteger, URI, URL, Date and File can now be
     fields in generated classes. (Alexandre Normand and cutting)
 
+    AVRO-1259. Java: Improve Trevni's encoding of sparse columns.
+    (cutting)
+
   BUG FIXES
 
 Avro 1.7.4 (22 February 2012)
